# maxio

./: .gitignore  Cargo.toml
.sisyphus/: plan.md  ralph-loop.local.md
crates/maxio-admin/: Cargo.toml
crates/maxio-admin/src/: lib.rs  middleware.rs  router.rs  types.rs
crates/maxio-admin/src/batch/: expiration.rs  job.rs  mod.rs  scheduler.rs  types.rs
crates/maxio-admin/src/handlers/: batch.rs  config.rs  health.rs  info.rs  metrics.rs  mod.rs  policy.rs  user.rs
crates/maxio-admin/src/metrics/: mod.rs  registry.rs  types.rs
crates/maxio-admin/src/metrics/collectors/: api.rs  mod.rs  storage.rs  system.rs
crates/maxio-auth/: Cargo.toml
crates/maxio-auth/src/: credentials.rs  lib.rs  middleware.rs  parser.rs  signature_v4.rs
crates/maxio-common/: Cargo.toml
crates/maxio-common/src/: error.rs  hash.rs  lib.rs  time.rs  types.rs  xml.rs
crates/maxio-crypto/: Cargo.toml
crates/maxio-crypto/src/: cipher.rs  key.rs  lib.rs
crates/maxio-distributed/: Cargo.toml
crates/maxio-distributed/src/: discovery.rs  errors.rs  lib.rs  system.rs  types.rs
crates/maxio-distributed/src/dsync/: client.rs  drwmutex.rs  lock_args.rs  locker.rs  mod.rs
crates/maxio-distributed/src/grid/: connection.rs  handler.rs  manager.rs  message.rs  mod.rs  mux.rs  stream.rs
crates/maxio-distributed/src/healing/: heal.rs  mod.rs  mrf.rs  sequence.rs  tracker.rs
crates/maxio-distributed/src/replication/: config.rs  mod.rs  mrf.rs  pool.rs  state.rs  types.rs  worker.rs
crates/maxio-iam/: Cargo.toml
crates/maxio-iam/src/: lib.rs  policy.rs  store.rs  system.rs  types.rs
crates/maxio-lifecycle/: Cargo.toml
crates/maxio-lifecycle/src/: lib.rs  scanner.rs  store.rs  system.rs  types.rs
crates/maxio-notification/: Cargo.toml
crates/maxio-notification/src/: lib.rs  store.rs  system.rs  types.rs
crates/maxio-notification/src/targets/: webhook.rs
crates/maxio-s3-api/: Cargo.toml
crates/maxio-s3-api/src/: error.rs  lib.rs  router.rs
crates/maxio-s3-api/src/handlers/: admin.rs  bucket.rs  health.rs  lifecycle.rs  mod.rs  multipart.rs  object.rs  replication.rs  tagging.rs  versioning.rs
crates/maxio-server/: Cargo.toml
crates/maxio-server/src/: main.rs
crates/maxio-storage/: Cargo.toml
crates/maxio-storage/src/: datatypes.rs  lib.rs  single.rs  traits.rs
crates/maxio-storage/src/erasure/: mod.rs  objects.rs  storage.rs
crates/maxio-storage/src/pool/: decommission.rs  expansion.rs  manager.rs  mod.rs  rebalance.rs  types.rs
crates/maxio-storage/src/xl/: storage.rs
