[package]
name = "maxio-admin"
version.workspace = true
edition.workspace = true

[dependencies]
maxio-common = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
