[package]
name = "maxio-distributed"
version.workspace = true
edition.workspace = true

[dependencies]
maxio-common = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
