[package]
name = "maxio-distributed"
version.workspace = true
edition.workspace = true

[dependencies]
maxio-common = { workspace = true }
maxio-storage = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
rmp-serde = { workspace = true }
tokio-tungstenite = "0.24"
