[package]
name = "maxio-iam"
version.workspace = true
edition.workspace = true

[dependencies]
maxio-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
