[package]
name = "maxio-s3-api"
version.workspace = true
edition.workspace = true

[dependencies]
maxio-common = { workspace = true }
maxio-auth = { workspace = true }
maxio-iam = { workspace = true }
maxio-notification = { workspace = true }
maxio-storage = { workspace = true }
base64 = { workspace = true }
md-5 = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
